variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: illegal start of simple pattern
var nbPas int: =0
             ^Variables:2: error: '=' expected but ';' found.
while (!estSurBiscuit) {
^Variables:7: error: identifier expected but '=' found.
dejaFait int: = 0
              ^